Se realiza cambios en el Index.html

--- a/Alegolas Web/Public/HTML/Index.html
+++ b/Alegolas Web/Public/HTML/Index.html
@@ -21,11 +21,9 @@
       <h2>¡Bienvenidos al universo de "En la mente de Alegolas"!</h2>
       <div class="container">
         <p>
-        <br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dicta cumque illum. Odio officiis explicabo nisi cumque! Odit voluptates ratione, eos sit animi exercitationem, minus totam, ipsa eum assumenda quidem?
-        Odio iusto fugiat possimus soluta! Doloremque eos, similique suscipit asperiores, accusamus, porro vitae laboriosam ut ipsa pariatur vel magni! Suscipit, optio? Molestiae nesciunt amet recusandae reiciendis aliquam officiis culpa natus!
-        Aliquid, repellendus velit nulla eos magnam assumenda beatae corporis deleniti cum voluptatibus labore ex molestias enim. Consequatur, dolorem deleniti natus dicta, commodi quam obcaecati magni libero dolores aliquid, voluptate atque.
-        Quis in obcaecati esse, temporibus inventore voluptates fuga, natus id quam vitae alias omnis assumenda consequatur ipsa ratione sunt repudiandae maiores beatae, facere repellendus cumque harum? Obcaecati minus magni iste?
-        Hic exercitationem provident praesentium magni possimus ut, nemo officia! Quos alias officia, repellat aspernatur temporibus laborum distinctio incidunt culpa. Incidunt atque sequi, maxime amet perferendis ex ut non quae? Laboriosam.
+        <br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem praesentium unde exercitationem fugiat nam assumenda sunt similique dolorem, tempore commodi reprehenderit laboriosam perferendis maxime odio voluptatibus esse labore consequuntur? Nobis?
+        Vel molestias modi, tenetur ab rem sed temporibus, praesentium nulla repudiandae recusandae deleniti quod illum eveniet architecto omnis. Nobis repellat sit odit eaque ducimus, vitae in voluptatem necessitatibus mollitia neque?
+        Doloremque, aspernatur fugit et, odit accusamus dolorem ipsa ipsum autem assumenda ab beatae nam delectus, iure quae soluta. Excepturi quisquam quibusdam voluptatibus veritatis voluptate molestiae dolorum voluptates explicabo? Cumque, consequatur?
       </p>
       </div>
       
