--- a/Alegolas Web/Public/HTML/Index.html
+++ b/Alegolas Web/Public/HTML/Index.html
@@ -3,218 +3,232 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/Alegolas Web/Assets/ICON/Alegolas.ico" />
-    <link rel="stylesheet" href="/Alegolas Web/Assets/CSS/main.css" />
+    <link rel="icon" href="/Assets/ICON/Alegolas.ico" />
+    <link rel="stylesheet" href="/Assets/CSS/main.css" />
     <title>En la mente de alegolas</title>
   </head>
   <body>
     <nav>
       <ul>
-        <a href="Index.html" target="_parent"><img src="/Alegolas Web/Assets/IMG/Alegolas.png" alt="Logo Alegolas" class="ico-nav"/></a>
+        <a href="Index.html" target="_parent"><img src="/Assets/IMG/Alegolas.png" alt="Logo Alegolas" class="ico-nav"/></a>
+        <li><a>poetas</a></li>
         <li><a>poemas</a></li>
         <li><a>nosotros</a></li>
         <li><a>contactanos</a></li>
-        <li><a>acceder</a></li>
+        <li><a href="Login.html" target="_parent">acceder</a></li>
       </ul>
     </nav>
+    
     <div class="header">
       <h2>¡Bienvenidos al universo de "En la mente de Alegolas"!</h2>
-      <div class="container">
+      <div class="informacion">
         <p>
-        <br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem praesentium unde exercitationem fugiat nam assumenda sunt similique dolorem, tempore commodi reprehenderit laboriosam perferendis maxime odio voluptatibus esse labore consequuntur? Nobis?
-        Vel molestias modi, tenetur ab rem sed temporibus, praesentium nulla repudiandae recusandae deleniti quod illum eveniet architecto omnis. Nobis repellat sit odit eaque ducimus, vitae in voluptatem necessitatibus mollitia neque?
-        Doloremque, aspernatur fugit et, odit accusamus dolorem ipsa ipsum autem assumenda ab beatae nam delectus, iure quae soluta. Excepturi quisquam quibusdam voluptatibus veritatis voluptate molestiae dolorum voluptates explicabo? Cumque, consequatur?
-      </p>
+          <br />Este espacio ha sido creado y diseñado cuidadosamente como un
+          refugio para todas aquellas personas apasionadas a la escritura
+          poetica.Os invitamos a explorar por nuestro menu donde podran navegar
+          por las distintas categorias donde encontrareis los versos escritos por
+          nuestros escritores, este blog es un espacio donde podreis compartir
+          vuestros pensamientos mas profundos en formas de poesia y dejar una
+          marca personal en el mundo de la poesia
+        </p>
       </div>
-      
       <h2 class="Menu">nuestros poemas</h2>
-      <div class="container">
-        <div class="slide">
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Admiración .png" alt="Admiración" class="Sentimientos"/>
-            <h4>Admiración</h4>
+      <div class="Container-menu">
+       <div class="Cards">
+            <img src="/Assets/IMG/Admiración .png" alt="Admiración" class="Sentimientos"/>
+            <h4 id="admiracion">Admiración</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Adoración.jpg" alt="Adoración" class="Sentimientos"/>
-            <h4>Adoración</h4>
+          <div class="Cards">
+            <img src="/Assets/IMG/Adoración.jpg" alt="Adoración" class="Sentimientos"/>
+            <h4 id="adoracion">Adoración</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Amor.jpg" alt="Amor" class="Sentimientos"/>
-            <h4>Amor</h4>
+          <div class="Cards">
+            <img src="/Assets/IMG/Amor.jpg" alt="Amor" class="Sentimientos"/>
+            <h4 id="amor">Amor</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Angustia.jpeg" alt="Angustia" class="Sentimientos"/>
-            <h4>Angustia</h4>
+          <div class="Cards">
+            <img src="/Assets/IMG/Angustia.jpeg" alt="Angustia" class="Sentimientos"/>
+            <h4 id="angustia">Angustia</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Arrepentimiento.jpeg" alt="Arrepentimiento" class="Sentimientos"/>
-            <h4>Arrepentimiento</h4>
+          <div class="Cards">
+            <img src="/Assets/IMG/Arrepentimiento.jpeg" alt="Arrepentimiento" class="Sentimientos"/>
+            <h4 id="arrepentimiento">Arrepentimiento</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Celos.png" alt="Celos" class="Sentimientos"/>
-            <h4>Celos</h4>
+          <div class="Cards">
+            <img src="/Assets/IMG/Celos.png" alt="Celos" class="Sentimientos"/>
+            <h4 id="celos">Celos</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Compromiso.jpg" alt="Compromiso" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Compromiso.jpg" alt="Compromiso" class="Sentimientos"/>
             <h4>Compromiso</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Culpabilidad.png" alt="Culpabilidad" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Culpabilidad.png" alt="Culpabilidad" class="Sentimientos"/>
             <h4>Culpabilidad</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Decepción.jpg" alt="Decepción" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Decepción.jpg" alt="Decepción" class="Sentimientos"/>
             <h4>Decepción</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Desamor.jpg" alt="Desamor" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Desamor.jpg" alt="Desamor" class="Sentimientos"/>
             <h4>Desamor</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Deseo.jpg" alt="Deseo" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Deseo.jpg" alt="Deseo" class="Sentimientos"/>
             <h4>Deseo</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Devoción.png" alt="Devoción" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Devoción.png" alt="Devoción" class="Sentimientos"/>
             <h4>Devoción</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Dolor.png" alt="Dolor" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Dolor.png" alt="Dolor" class="Sentimientos"/>
             <h4>Dolor</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Enamoramiento.png" alt="Enamoramiento" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Enamoramiento.png" alt="Enamoramiento" class="Sentimientos"/>
             <h4>Enamoramiento</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Fantasia.png" alt="Fantasia" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Fantasia.png" alt="Fantasia" class="Sentimientos"/>
             <h4>Fantasia</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Ilusión.png" alt="Ilusión" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Ilusión.png" alt="Ilusión" class="Sentimientos"/>
             <h4>Ilusión</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Intimidad.jpg" alt="Intimidad" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Intimidad.jpg" alt="Intimidad" class="Sentimientos"/>
             <h4>Intimidad</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Melancolia.png" alt="Melancolia" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Melancolia.png" alt="Melancolia" class="Sentimientos"/>
             <h4>Melancolia</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Miedo.jpg" alt="Miedo" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Miedo.jpg" alt="Miedo" class="Sentimientos"/>
             <h4>Miedo</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Orgullo.png" alt="Orgullo" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Orgullo.png" alt="Orgullo" class="Sentimientos"/>
             <h4>Orgullo</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Pasion.png" alt="Pasión" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Pasion.png" alt="Pasión" class="Sentimientos"/>
             <h4>Pasión</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Poema.jpeg" alt="Poema" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Poema.jpeg" alt="Poema" class="Sentimientos"/>
             <h4>Poema</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Posesivo.png" alt="Posesivo" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Posesivo.png" alt="Posesivo" class="Sentimientos"/>
             <h4>Posesivo</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Protección.jpg" alt="Protección" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Protección.jpg" alt="Protección" class="Sentimientos"/>
             <h4>Protección</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Soledad.jpg" alt="Soledad" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Soledad.jpg" alt="Soledad" class="Sentimientos"/>
             <h4>Soledad</h4>
             <button class="See-more">see more</button>
           </div>
-          <div class="item">
-            <img src="/Alegolas Web/Assets/IMG/Tristeza.jpg" alt="Tristeza" class="Sentimientos"/>
+          <div class="Cards">
+            <img src="/Assets/IMG/Tristeza.jpg" alt="Tristeza" class="Sentimientos"/>
             <h4>Tristeza</h4>
             <button class="See-more">see more</button>
           </div>
         </div>
-        <div class="button">
-          <button><img class="ico-opc" src="/Alegolas Web/Assets/ICON/left.png" alt="Siguiente"/></button>
-          <button><img class="ico-opc" src="/Alegolas Web/Assets/ICON/rigth.png" alt="Regresar"/></button>
-        </div>
       </div>
     </div>
     <section>
-      <p class="info">
-        <span
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+      <div class="informacion">
+        <p>
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
           tempora ducimus nemo voluptatibus est, labore aut magni vero dolorum
           natus pariatur fugit veritatis, hic, tempore debitis modi veniam
-          maxime blanditiis.</span
-        ><span
-          >Accusamus at, impedit dignissimos explicabo inventore ducimus nemo
+          maxime blanditiis.</span><span>Accusamus at, impedit dignissimos explicabo inventore ducimus nemo
           dolore labore laborum, earum, numquam optio iure quibusdam a
           perferendis quas dolorem aliquam non facere hic dolores ad quisquam.
-          Sapiente, dicta recusandae.</span
-        ><span
-          >Explicabo, quia vel reprehenderit adipisci sint praesentium quos
+          Sapiente, dicta recusandae.</span><span>Explicabo, quia vel reprehenderit adipisci sint praesentium quos
           inventore id labore incidunt rerum unde laboriosam quis? Maxime magni
           possimus qui ut optio, fugit enim aspernatur est vitae temporibus.
-          Soluta, exercitationem?</span
-        >
-      </p>
+          Soluta, exercitationem?</span>
+        </p>
+      </div>
+      <div class="informacion">
+        <p>
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+          tempora ducimus nemo voluptatibus est, labore aut magni vero dolorum
+          natus pariatur fugit veritatis, hic, tempore debitis modi veniam
+          maxime blanditiis.</span><span>Accusamus at, impedit dignissimos explicabo inventore ducimus nemo
+          dolore labore laborum, earum, numquam optio iure quibusdam a
+          perferendis quas dolorem aliquam non facere hic dolores ad quisquam.
+          Sapiente, dicta recusandae.</span><span>Explicabo, quia vel reprehenderit adipisci sint praesentium quos
+          inventore id labore incidunt rerum unde laboriosam quis? Maxime magni
+          possimus qui ut optio, fugit enim aspernatur est vitae temporibus.
+          Soluta, exercitationem?</span>
+        </p>
+      </div>
+      <div class="informacion">
+        <p>
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+          tempora ducimus nemo voluptatibus est, labore aut magni vero dolorum
+          natus pariatur fugit veritatis, hic, tempore debitis modi veniam
+          maxime blanditiis.</span><span>Accusamus at, impedit dignissimos explicabo inventore ducimus nemo
+          dolore labore laborum, earum, numquam optio iure quibusdam a
+          perferendis quas dolorem aliquam non facere hic dolores ad quisquam.
+          Sapiente, dicta recusandae.</span><span>Explicabo, quia vel reprehenderit adipisci sint praesentium quos
+          inventore id labore incidunt rerum unde laboriosam quis? Maxime magni
+          possimus qui ut optio, fugit enim aspernatur est vitae temporibus.
+          Soluta, exercitationem?</span>
+        </p>
+      </div>
     </section>
     <footer class="footer">
-  <p>&copy; Copyright 2024 - En la mente de Alegolas</p>
-  <hr />
-  <div class="icon-container">
-    <a href="https://chat.whatsapp.com/EsUebwL7wRNLYoPjNSeijk" target="_parent">
-      <img src="/Alegolas Web/Assets/ICON/Whatsapp.png" alt="Grupo de Whatsapp" />
-    </a>
-    <a href="#">
-      <img src="/Alegolas Web/Assets/ICON/contact.png" alt="Contactanos" />
-    </a>
-  </div>
-</footer>
-
-    <!-- <footer class="footer">
-      <p>&copy; Copyright 2024 - En la mente de Alegolas</p>
+      <p>Copyright &copy; 2024 Jorge Hernandez - Todos los derechos reservados</p>
       <hr />
       <div class="icon-container">
         <a
           href="https://chat.whatsapp.com/EsUebwL7wRNLYoPjNSeijk"
           target="_parent"
           ><img
-            src="/Alegolas Web/Assets/ICON/Whatsapp.png"
+            src="/Assets/ICON/Whatsapp.png"
             alt="Grupo de Whatsapp"
         /></a>
-        <a href="#"
-          ><img src="/Alegolas Web/Assets/ICON/contact.png" alt="Contactanos"
+        <a href=""
+          ><img src="/Assets/ICON/contact.png" alt="Contactanos"
+        /></a>
+        <a href="https://www.youtube.com/@alegolasjuega6038" target="_blank"
+          ><img src="/Assets/ICON/Youtube.png" alt="Contactanos"
         /></a>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
